fixed some layout issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -318,9 +318,14 @@ footer {
 
 /* for 1440px */
 @media (max-width: 1440px) {
-  .container:not:nth-child(2) {
+  .container {
     max-width: 1305px;
     margin: 0 0 0 auto;
+    width: 100%;
+  }
+  #skillView {
+    max-width: 1305px;
+    margin: 0 0 0 0;
     width: 100%;
   }
 }
